# lanserve

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/: server.py  template.html
src/lanserve/: __init__.py  __main__.py  server.py  style.css  template.html
src/lanserve/static/: template.html  template.js
