[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lanserve"
version = "1.0.2"
description = "Local network file server with browser UI — browse, upload, and delete files over WiFi"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Syphax" }
]
keywords = ["file server", "local network", "wifi", "upload", "http server", "lan"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = []


[project.scripts]
lanserve = "lanserve.__main__:main"

[project.urls]
Homepage    = "https://github.com/Dev-syphax/lanserve"
Repository  = "https://github.com/Dev-syphax/lanserve"
"Bug Tracker" = "https://github.com/Dev-syphax/lanserve/issues"
Changelog   = "https://github.com/Dev-syphax/lanserve/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}
packages    = ["lanserve"]

[tool.setuptools.package-data]
lanserve = ["template.html"]